# pyside_template

./: .gitignore  .gitlab-ci.yml  CHANGE.md  LICENSE  README.md  build-dmg.sh  build.py  build_options.json  pyproject.toml  requirements.txt  setup_via_mirror.py
.github/workflows/: main.yml  release.yml  test.yml
.run/: Build Resources.run.xml  Debug App.run.xml  pytest.run.xml
app/: .gitignore  __main__.py  asserts.qrc  assets.qrc  main_window.py
app/assets/: logo.icns
app/builtin/: args.py  async_widget.py  asyncio.py  config.py  github_updater.py  gitlab_updater.py  locale.py  misc.py  paths.py  theme_manager.py  update.py  update_widget.py  utils.py
app/i18n/: zh-Hans.ts  zh_CN.ts
app/ui/: main_window.ui
app/ui/builtin/: update_dialog.ui  update_widget.ui
docs/: i18n.md  macos.md  publish.md  windows7.md
qml_demo/: README.md
tool/: __main__.py  args.py  cache.py  git.py  glob.py  pyproject.py  pytest.py
tool/builder/: build.py  nuitka.py  qt.py
