[project]
name = "pyside-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.28.1",
    "packaging>=25.0",
    "pyqtdarktheme>=2.1.0",
    "pyside6>=6.6.3.1",
    "qasync>=0.27.1",
]

[dependency-groups]
dev = [
    "glom>=24.11.0",
    "nuitka>=2.7.12",
    "toml>=0.10.2",
]

[tool.build]
# Nuitka build options
# Some options are configured for CI and build.py, DO NOT CHANGE:
# --output-dir, --output-filename, --product-version
quiet = true
assume-yes-for-downloads = true
plugin-enable = ["pyside6"]
nofollow-import-to = ["unittest"]

[tool.build.win32]
# Nuitka build options for {sys.platform}
windows-console-mode = "disable"
windows-icon-from-ico = "app/assets/logo.ico"

[tool.build.i18n]
# Default language is en_US where defined in *.ui and *.py files.
# Exclude the app/resources/*.py.
languages = [
    "zh_CN"
]
