[project]
name = "pyside-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.28.1",
    "packaging>=25.0",
    "pyqtdarktheme>=2.1.0",
    "pyside6>=6.6.3.1",
    "qasync>=0.28.0",
    "glom>=24.11.0",
]

[dependency-groups]
dev = [
    "nuitka>=2.7.16",
    "pyside-cli>=0.1.1",
    "pytest>=8.3.5",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=5.0.0",
    "setuptools>=75.3.2",
    "toml>=0.10.2",
]

[tool.build]
# Nuitka build options
# Some options are configured for CI and tool, DO NOT CHANGE:
# --output-dir, --output-filename, --product-version
quiet = true
assume-yes-for-downloads = true
plugin-enable = ["pyside6"]
nofollow-import-to = [
    "unittest",
    "pytest",
    "pytest-benchmark",
    "pytest-cov",
    "PySide6.QtAsyncio",
    "PySide6.QtNetwork",
    "PySide6.QtNetworkAuth"
]
noinclude-qt-plugins = ["tls"]

[tool.build.win32]
# Nuitka build options for {sys.platform}
windows-console-mode = "disable"
windows-icon-from-ico = "app/assets/logo.ico"
noinclude-dlls = [
    "qt6network.dll"
]

[tool.build.linux]
linux-icon = "app/assets/logo.ico"
noinclude-dlls = [
    "libQt6Network.so.6"
]

[tool.build.i18n]
# Default language is en_US where defined in *.ui and *.py files.
# Exclude the app/resources/*.py.
languages = [
    "zh_CN"
]
