[project]
name = "pyside_template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "packaging>=25.0",
    "qasync>=0.28.0",
    "glom>=24.11.0",
    "pyside6>=6.1.3",
    "singleton-decorator>=1.0.0",
]

[dependency-groups]
dev = [
    "nuitka>=2.8.1",
    "pyinstaller>=6.16.0",
    "pyside-cli>=0.3.1",
    "pytest>=8.3.5",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=5.0.0",
    "toml>=0.10.2",
] 

[tool.pyside-cli]
# Nuitka build options
# Some options are configured for CI and tool, DO NOT CHANGE:
# --output-dir, --output-filename, --product-version
quiet = true
assume-yes-for-downloads = true
plugin-enable = ["pyside6"]
nofollow-import-to = [
    "unittest",
    "pytest",
    "pytest-benchmark",
    "pytest-cov",
    "PySide6.QtAsyncio",
    "PySide6.QtNetwork",
    "PySide6.QtNetworkAuth"
]
noinclude-qt-plugins = ["tls"]

[tool.pyside-cli.win32]
# Nuitka build options for {sys.platform}
windows-console-mode = "disable"
windows-icon-from-ico = "app/assets/logo.ico"
noinclude-dlls = [
    "qt6network.dll"
]

[tool.pyside-cli.linux]
linux-icon = "app/assets/logo.ico"
noinclude-dlls = [
    "libQt6Network.so.6"
]

[tool.pyside-cli.pyinstaller]
# PyInstaller build options
# Some options are configured for CI and tool, DO NOT CHANGE:
# --distpath, --workpath, --specpath, --name
windowed = true
icon = "app/assets/logo.ico"

[tool.pyside-cli.i18n]
# Default language is en_US where defined in *.ui and *.py files.
# Exclude the app/resources/*.py.
languages = [
    "zh_CN"
]

[tool.pytest.ini_options]
testpaths = [
    "app/test"
]

[project.scripts]
App = "app.__main__:run_module"
AppNoUpdater = "app.__main__:main_no_updater"

# build sources wheel
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app", "app.*"]
exclude = ["app.test", "app.test.*"]
